# vocab-veto

./: .containerignore  .dockerignore  .gitignore  API.md  CLAUDE.md  CLI_IMPLEMENTATION_PLAN.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  RELEASE.md  build.rs  compose.yaml  openapi.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benches/: matcher.rs
benches/load/: README.md  oha-1kib-en.sh
deploy/: Containerfile  Dockerfile
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  secret.example.yaml  service.yaml
scripts/: bench-compare.py  load-test.sh
src/: auth.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  observability.rs  state.rs
src/matcher/: boundary.rs  mod.rs  normalize.rs  scan.rs
src/routes/: check.rs  health.rs  metrics.rs  mod.rs
tests/: cli.rs  http.rs  metrics.rs
