[package]
name = "banned-words-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Vocab Veto — stateless multi-language banned-words HTTP service."
license = "MIT"
publish = false

[dependencies]
aho-corasick = "1.1"
caseless = "0.2"
phf = { version = "0.11", features = ["macros"] }
unicode-normalization = "0.1"
unicode-segmentation = "1.12"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "matcher"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
