[package]
name = "banned-words-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Vocab Veto — stateless multi-language banned-words HTTP service."
license = "MIT"
publish = false

[dependencies]
aho-corasick = "1.1"
caseless = "0.2"
phf = { version = "0.11", features = ["macros"] }
unicode-normalization = "0.1"
unicode-segmentation = "1.12"

axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tower-http = { version = "0.6", features = ["limit", "set-header", "trace"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["env", "toml", "test"] }
subtle = "2.6"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bench]]
name = "matcher"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
